# TC2038

./: CMakeLists.txt
A01197991-A00830474_Act3.2/: main.cpp
A01197991-A00830475_Act1.1/: main.cpp
A01197991-A00830475_Act1.2/: main.cpp
A01197991-A00830475_Act1.3/: main.cpp
A01197991-A00830475_Act2.1/: main.cpp
A01197991-A00830475_Act2.2/: main.cpp
A01197991-A00830475_Act3.1/: main.cpp
A01197991-A00830475_Act3.2/: main.cpp
A01197991-A00830475_Act3.3/: main.cpp
A01197991-A00830475_Act3.4/: main.cpp
A01197991-A00830475_Act3.5/: main.cpp
A01197991-A00830475_Act3.6/: main.cpp
A01197991-A00830475_Act4.1/: geometry.cpp  geometry.hpp  main.cpp
A01197991-A00830475_Act4.2/: a01197991main.cpp  main.cpp
A01197991-A00830475_Act4.3/: a01197991geometry.cpp  main.cpp
A01197991-A00830475_Act4.4/: main.cpp
A01197991-A00830475_Act5.1/: main.cpp
A01197991-A00830475_Act5.2/: main.cpp
A01197991-A00830475_Act5.3/: main.cpp
A01197991_ActInt1/: main.cpp  team.txt
A01197991_ActInt2/: DisjointSet.cpp  DisjointSet.hpp  algorithm.cpp  algorithm.hpp  geometry.cpp  geometry.hpp  main.cpp  team.txt
Quiz-02-14/: main.cpp
Quiz-03-11/: main.cpp
Quiz-03-5/: main.cpp
Quiz-04-03/: main.cpp
_ActInt1/: main.cpp  mcode1.txt  mcode2.txt  mcode3.txt  transmission1.txt  transmission2.txt
