cmake_minimum_required(VERSION 3.24)
project(TC2038)

set(CMAKE_CXX_STANDARD 20)

add_executable(Act1.1 A01197991-A00830475_Act1.1/main.cpp)
add_executable(Act1.2 A01197991-A00830475_Act1.2/main.cpp)
add_executable(Act1.3 A01197991-A00830475_Act1.3/main.cpp)
add_executable(Act2.1 A01197991-A00830475_Act2.1/main.cpp)
add_executable(Act2.2 A01197991-A00830475_Act2.2/main.cpp)
add_executable(quiz0214 Quiz-02-14/main.cpp)
add_executable(Act3.1 A01197991-A00830475_Act3.1/main.cpp)
add_executable(ActInt1 _ActInt1/main.cpp)