cmake_minimum_required(VERSION 3.24)
project(TC2038)

set(CMAKE_CXX_STANDARD 20)

add_executable(Act1.1 A01197991-A00830475_Act1.1/main.cpp)
add_executable(Act1.2 A01197991-A00830475_Act1.2/main.cpp)
add_executable(Act1.3 A01197991-A00830475_Act1.3/main.cpp)
add_executable(Act2.1 A01197991-A00830475_Act2.1/main.cpp)
add_executable(Act2.2 A01197991-A00830475_Act2.2/main.cpp)
add_executable(quiz0214 Quiz-02-14/main.cpp)
add_executable(Act3.1 A01197991-A00830475_Act3.1/main.cpp)
add_executable(ActInt1 A01197991_ActInt1/main.cpp)
add_executable(quiz0305 Quiz-03-5/main.cpp)
add_executable(Act3.2 A01197991-A00830475_Act3.2/main.cpp)
add_executable(Act3.3 A01197991-A00830475_Act3.3/main.cpp)
add_executable(Act3.4 A01197991-A00830475_Act3.4/main.cpp)
add_executable(Act3.5 A01197991-A00830475_Act3.5/main.cpp)
add_executable(Act3.6 A01197991-A00830475_Act3.6/main.cpp)
add_executable(quiz0311 Quiz-03-11/main.cpp)
add_executable(Act4.1 A01197991-A00830475_Act4.1/main.cpp A01197991-A00830475_Act4.1/geometry.cpp)
add_executable(quiz0403 Quiz-04-03/main.cpp)
add_executable(Act4.2 A01197991-A00830475_Act4.2/a01197991main.cpp A01197991-A00830475_Act4.2/a01197991geometry.cpp)
add_executable(Act4.3 A01197991-A00830475_Act4.3/main.cpp A01197991-A00830475_Act4.3/a01197991geometry.cpp)
add_executable(Act4.4 A01197991-A00830475_Act4.4/main.cpp)
add_executable(Act5.1 A01197991-A00830475_Act5.1/main.cpp)
add_executable(Act5.2 A01197991-A00830475_Act5.2/main.cpp)
add_executable(Act5.3 A01197991-A00830475_Act5.3/main.cpp)

add_executable(ActInt2 A01197991_ActInt2/main.cpp)
